@@ -70,28 +70,35 @@ class BPAGENERATOR extends UTIL
         }
 
         ##########################################
-
-        PH::print_stdout( " - request info from Device" );
-        $this->request_bpa($this->pan->connector);
-
-
-        if( $cycleConnectedFirewalls && $this->configType == 'panorama' )
+        if( $this->configInput['type'] !== 'api' )
         {
-            $firewallSerials = $this->pan->connector->panorama_getConnectedFirewallsSerials();
+            $this->request_bpa(null, PH::$args['in']);
+        }
+        else
+        {
+            PH::print_stdout( " - request info from Device" );
+            $this->request_bpa($this->pan->connector);
 
-            $countFW = 0;
-            foreach( $firewallSerials as $fw )
+
+            if( $cycleConnectedFirewalls && $this->configType == 'panorama' )
             {
-                $countFW++;
-                PH::print_stdout(" ** Handling FW #{$countFW}/" . count($firewallSerials) . " : serial/{$fw['serial']}   hostname/{$fw['hostname']} **" );
-                $tmpConnector = $this->pan->connector->cloneForPanoramaManagedDevice($fw['serial']);
+                $firewallSerials = $this->pan->connector->panorama_getConnectedFirewallsSerials();
 
-                if( $this->debugAPI )
-                    $tmpConnector->setShowApiCalls(TRUE);
+                $countFW = 0;
+                foreach( $firewallSerials as $fw )
+                {
+                    $countFW++;
+                    PH::print_stdout(" ** Handling FW #{$countFW}/" . count($firewallSerials) . " : serial/{$fw['serial']}   hostname/{$fw['hostname']} **" );
+                    $tmpConnector = $this->pan->connector->cloneForPanoramaManagedDevice($fw['serial']);
 
-                $this->request_bpa($tmpConnector);
+                    if( $this->debugAPI )
+                        $tmpConnector->setShowApiCalls(TRUE);
+
+                    $this->request_bpa($tmpConnector);
+                }
             }
         }
+
     }
 
     public function supportedArguments()
@@ -199,37 +206,79 @@ class BPAGENERATOR extends UTIL
     }
 
 
-    function request_bpa($connector)
+    function request_bpa($connector, $tsf_config = null)
     {
-        $connector->refreshSystemInfos(TRUE);
-        $connector->show_config();
-        $connector->request_license_info();
-        $connector->show_clock();
+        if ($connector !== null) {
+            $connector->refreshSystemInfos(TRUE);
+            $connector->show_config();
+            $connector->request_license_info();
+            $connector->show_clock();
+        }
+
 
         $response_start = "<response status=\"success\">";
         $response_end = "</response>";
 
         $config = $response_start;
-        $config .= $this->strip_hidden_chars( $connector->show_config_raw->saveHTML() );
+        if ($connector !== null)
+            $config .= $this->strip_hidden_chars($connector->show_config_raw->saveHTML());
+        else {
+            if ($tsf_config === null)
+                derr("problem with your tsf XML extracted config file");
+            $xmlString = file_get_contents($tsf_config);
+
+            $newdoc = new DOMDocument;
+            $newdoc->loadXML($xmlString, XML_PARSE_BIG_LINES);
+
+            $lineReturn = TRUE;
+            $indentingXmlIncreament = 1;
+            $indentingXml = 0;
+            $xml = &DH::dom_to_xml($newdoc->documentElement, $indentingXml, $lineReturn, -1, $indentingXmlIncreament);
+            $config .= '<result>'.$xml.'</result>';
+        }
         $config .= $response_end;
 
         $system_info = $response_start;
-        $system_info .= $this->strip_hidden_chars( $connector->show_system_info_raw->saveHTML() );
+        if ($connector !== null)
+            $system_info .= $this->strip_hidden_chars($connector->show_system_info_raw->saveHTML());
+        else
+        {
+            $dummy_serial = "012801088986";
+            $dummy_hostname = "PAN-OS-PHP_dummy_DEVICE";
+            $system_info .= '<result><system><hostname>'.$dummy_hostname.'</hostname><ip-address>192.168.10.111</ip-address><public-ip-address>unknown</public-ip-address><netmask>255.255.255.0</netmask><default-gateway>192.168.10.1</default-gateway><is-dhcp>no</is-dhcp><ipv6-address>unknown</ipv6-address><ipv6-link-local-address>fe80::ea98:6dff:feb0:2600/64</ipv6-link-local-address><mac-address>e8:98:6d:b0:26:00</mac-address><time>Thu Oct 12 11:26:46 2023</time><uptime>342 days, 23:17:58</uptime><devicename>PA-220</devicename><family>220</family><model>PA-220</model><serial>'.$dummy_serial.'</serial><cloud-mode>non-cloud</cloud-mode><sw-version>10.1.6-h3</sw-version><global-protect-client-package-version>0.0.0</global-protect-client-package-version><device-dictionary-version>97-438</device-dictionary-version><device-dictionary-release-date>2023/10/05 23:45:14 CEST</device-dictionary-release-date><app-version>8763-8333</app-version><app-release-date>2023/10/11 18:04:41 CEST</app-release-date><av-version>4602-5120</av-version><av-release-date>2023/10/11 13:22:49 CEST</av-release-date><threat-version>8763-8333</threat-version><threat-release-date>2023/10/11 18:04:41 CEST</threat-release-date><wf-private-version>0</wf-private-version><wf-private-release-date>unknown</wf-private-release-date><url-db>paloaltonetworks</url-db><wildfire-version>811345-815141</wildfire-version><wildfire-release-date>2023/10/12 11:12:44 CEST</wildfire-release-date><wildfire-rt>Disabled</wildfire-rt><url-filtering-version>20231012.20145</url-filtering-version><global-protect-datafile-version>unknown</global-protect-datafile-version><global-protect-datafile-release-date>unknown</global-protect-datafile-release-date><global-protect-clientless-vpn-version>0</global-protect-clientless-vpn-version><logdb-version>10.1.2</logdb-version><plugin_versions><entry name="dlp" version="1.0.3"><pkginfo>dlp-1.0.3</pkginfo></entry></plugin_versions><platform-family>220</platform-family><vpn-disable-mode>off</vpn-disable-mode><multi-vsys>off</multi-vsys><operational-mode>normal</operational-mode><device-certificate-status>None</device-certificate-status></system></result>';
+        }
+
         $system_info .= $response_end;
 
         $license = $response_start;
-        $license .= $this->strip_hidden_chars( $connector->request_license_info_raw->saveHTML() );
+        if ($connector !== null)
+            $license .= $this->strip_hidden_chars($connector->request_license_info_raw->saveHTML());
+        else
+        {
+            $license_issue = "August 24, 2020";
+            $license_expire = "January 09, 2029";
+            $license .= '<result><licenses><entry><feature>DNS Security</feature><description>Palo Alto Networks DNS Security License</description><serial>' . $dummy_serial . '</serial><issued>'.$license_issue.'</issued><expires>'.$license_expire.'</expires><expired>no</expired><authcode></authcode></entry><entry><feature>Threat Prevention</feature><description>Threat Prevention</description><serial>'.$dummy_serial.'</serial><issued>'.$license_issue.'</issued><expires>'.$license_expire.'</expires><expired>no</expired><authcode></authcode></entry><entry><feature>SD WAN</feature><description>License to enable SD WAN feature</description><serial>'.$dummy_serial.'</serial><issued>'.$license_issue.'</issued><expires>'.$license_expire.'</expires><expired>no</expired><authcode></authcode></entry><entry><feature>WildFire License</feature><description>WildFire signature feed, integrated WildFire logs, WildFire API</description><serial>'.$dummy_serial.'</serial><issued>'.$license_issue.'</issued><expires>'.$license_expire.'</expires><expired>no</expired><authcode></authcode></entry><entry><feature>Standard</feature><description>10 x 5 phone support; repair and replace hardware service</description><serial>'.$dummy_serial.'</serial><issued>'.$license_issue.'</issued><expires>'.$license_expire.'</expires><expired>no</expired><authcode></authcode></entry><entry><feature>PAN-DB URL Filtering</feature><description>Palo Alto Networks URL Filtering License</description><serial>'.$dummy_serial.'</serial><issued>'.$license_issue.'</issued><expires>'.$license_expire.'</expires><expired>no</expired><authcode></authcode></entry><entry><feature>GlobalProtect Gateway</feature><description>GlobalProtect Gateway License</description><serial>'.$dummy_serial.'</serial><issued>'.$license_issue.'</issued><expires>'.$license_expire.'</expires><expired>no</expired><authcode></authcode></entry></licenses></result>';
+        }
         $license .= $response_end;
 
         $clock = $response_start;
-        $clock .= $this->strip_hidden_chars( $connector->show_clock_raw->saveHTML() );
+        if( $connector !== null )
+            $clock .= $this->strip_hidden_chars( $connector->show_clock_raw->saveHTML() );
+        else
+            $clock .= "<result>Thu Oct 12 11:26:50 CEST 2023</result>";
         $clock .= $response_end;
 
         // Submit job to BPA API
         PH::print_stdout();
-        PH::print_stdout( " - Attempting to generate BPA for {$connector->info_hostname}" );
+        if( $connector !== null )
+            PH::print_stdout( " - Attempting to generate BPA for {$connector->info_hostname}" );
+        else
+            PH::print_stdout( " - Attempting to generate BPA for TSF running-config.xml" );
 
-        $result[$connector->info_serial] = $this->send_bpa_api($this->bpa_url . 'create/', "POST", $config, $system_info, $license, $clock);
+        if( $connector !== null )
+            $result[$connector->info_serial] = $this->send_bpa_api($this->bpa_url . 'create/', "POST", $config, $system_info, $license, $clock);
+        else
+            $result[$dummy_serial] = $this->send_bpa_api($this->bpa_url . 'create/', "POST", $config, $system_info, $license, $clock);
         //Array( [ #SERIAL ] => TASKID )
 
 
@@ -243,11 +292,24 @@ class BPAGENERATOR extends UTIL
         $loop = TRUE;
         while( $loop )
         {
-            if( isset($result[$connector->info_serial]) )
+            if( $connector !== null )
+            {
+                $serial = $connector->info_serial;
+                $hostname = $connector->info_hostname;
+            }
+
+            else
+            {
+                $serial = $dummy_serial;
+                $hostname = $dummy_hostname;
+            }
+
+
+            if( isset($result[$serial]) )
             {
                 PH::print_stdout();
-                PH::print_stdout( " - Checking " . $connector->info_hostname . " job ID " . $result[$connector->info_serial] );
-                $reply = $this->send_bpa_api($this->bpa_url . 'results/' . $result[$connector->info_serial] . '/', "GET");
+                PH::print_stdout( " - Checking " . $hostname . " job ID " . $result[$serial] );
+                $reply = $this->send_bpa_api($this->bpa_url . 'results/' . $result[$serial] . '/', "GET");
                 $parsed_reply = json_decode($reply, TRUE);
                 if( $parsed_reply === null )
                     derr( "invalid JSON file provided", null, FALSE );
@@ -262,18 +324,18 @@ class BPAGENERATOR extends UTIL
                 {
                     $loop = FALSE;  // Exit outer while loop
                     // Got BPA is JSON format in $reply
-                    PH::print_stdout( "  * store JSON response into: ".$this->filename_prefix . $connector->info_serial . ".json" );
-                    file_put_contents($this->filename_prefix . $connector->info_serial . '.json', $reply);
+                    PH::print_stdout( "  * store JSON response into: ".$this->filename_prefix . $serial . ".json" );
+                    file_put_contents($this->filename_prefix . $serial . '.json', $reply);
                     if( $this->generate_zip )
                     {
                         //Todo: swaschkut 20210350 ZIP download no longer working WHY???
-                        PH::print_stdout( " - Downloading zip for " . $connector->info_hostname . " job ID " . $result[$connector->info_serial] );
-                        $reply = $this->send_bpa_api($this->bpa_url . 'results/' . $result[$connector->info_serial] . '/download/', "GET");
+                        PH::print_stdout( " - Downloading zip for " . $hostname . " job ID " . $result[$serial] );
+                        $reply = $this->send_bpa_api($this->bpa_url . 'results/' . $result[$serial] . '/download/', "GET");
 
                         PH::print_stdout( "  * ZIP file content length: ".strlen( $reply ) );
 
-                        PH::print_stdout( "  * store ZIP response into: ".$this->filename_prefix . $connector->info_serial . ".zip" );
-                        file_put_contents($this->filename_prefix . $connector->info_serial . '.zip', $reply);
+                        PH::print_stdout( "  * store ZIP response into: ".$this->filename_prefix . $serial . ".zip" );
+                        file_put_contents($this->filename_prefix . $serial . '.zip', $reply);
 
                         if( strpos( $reply, "Could not find report bundle") !== false )
                         {
