@@ -5,6 +5,7 @@ UTIL:
 * type=xpath | introduce "actions=set-text:NODETEXT"
 * type=rule | new 'filter=(app has.seen.fast-api unknow-tcp)' - to filter for device traffic log if specific app-id was seen
 * type=rule actions=exporttoexcel | extend with column 'url-category'
+* type=bpa-generator | introduction to support offline XML config file
 
 BUGFIX:
 * type=gcp actions=download | bugfix to handle command order correctly
